Added requirements to all ships that require it